--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,12 +7,12 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Projects
-    url: '#projects'
-    weight: 20
-  - name: Contact
-    url: '#contact'
-    weight: 30
+#  - name: Projects
+#    url: '#projects'
+#    weight: 20
+#  - name: Contact
+#    url: '#contact'
+#    weight: 30
 #  - name: Posts
 #    url: '#posts'
 #    weight: 20
