--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,8 +7,8 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-#  - name: Projects
-#    url: '#projects'
+  - name: Projects
+    url: '#projects'
 #    weight: 20
 #  - name: Contact
 #    url: '#contact'
