--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -9,7 +9,15 @@ main:
     weight: 10
   - name: Projects
     url: '#projects'
-#    weight: 20
+    weight: 20
+  - name: Publications
+    url: '#featured'
+    weight: 30
+  - name: CV
+    url: uploads/YanmingWan_CV.pdf
+    weight: 40
+
+
 #  - name: Contact
 #    url: '#contact'
 #    weight: 30
